--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Homework 2 - Olivia Dagenhart</h1>
     <img src="./Image/HW2Map.png" alt="">
+    <h2>Vector Data</h2>
 </body>
 </html>
