--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Homework 2 - Olivia Dagenhart</h1>
     <img src="./Image/HW2Map.png" alt="">
     <h2>Vector Data</h2>
+    <h2><a href="./Data/MyBusStop_geojson.geojson">My Bus Stop</a></h2>
 </body>
 </html>
