--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <img src="./Image/HW2Map.png" alt="">
     <h2>Vector Data</h2>
     <h2><a href="./Data/MyBusStop_geojson.geojson">My Bus Stop</a></h2>
+    <h2><a href="./Data/MyFavoriteWalk_geojson.geojson">My Favorite Walk</a></h2>
 </body>
 </html>
