--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h2>Vector Data</h2>
     <h2><a href="./Data/MyBusStop_geojson.geojson">My Bus Stop</a></h2>
     <h2><a href="./Data/MyFavoriteWalk_geojson.geojson">My Favorite Walk</a></h2>
+    <h2><a href="./Data/MyOldHouse_geojson.geojson">My Old House</a></h2>
+    <h2><a href="./Data/MyNewHouse_geojson.geojson">My New House</a></h2>
 </body>
 </html>
