--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Homework 2 - Olivia Dagenhart</h1>
-    <img src="./Image/HW2Map.png" alt="">
+    <img src="./Image/Homework2Map.png" alt="">
     <h2>Vector Data</h2>
     <h2><a href="./Data/MyBusStop_geojson.geojson">My Bus Stop</a></h2>
     <h2><a href="./Data/MyFavoriteWalk_geojson.geojson">My Favorite Walk</a></h2>
