--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="./Image/Homework2Map.png" alt="">
     <h2>Vector Data</h2>
     <h2><a href="https://github.com/livicd/Homework-2/blob/main/Data/MyBusStop_geojson.geojson">My Bus Stop</a></h2>
-    <h2><a href="https://github.com/livicd/Homework-2/blob/main/Data/MyFavoriteWalk_geojson.geojson">My Favorite Walk</a></h2>
+    <h2><a href="github.com/livicd/Homework-2/blob/main/Data/MyFavoriteWalk_geojson.geojson">My Favorite Walk</a></h2>
     <h2><a href="./Data/MyOldHouse_geojson.geojson">My Old House</a></h2>
     <h2><a href="./Data/MyNewHouse_geojson.geojson">My New House</a></h2>
 </body>
