--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Homework 2 - Olivia Dagenhart</h1>
     <img src="./Image/Homework2Map.png" alt="">
     <h2>My Vector Data</h2>
-    <h2><a href="github.com/livicd/Homework-2/blob/main/Data/MyBusStop_geojson.geojson">My Bus Stop</a></h2>
-    <h2><a href="github.com/livicd/Homework-2/blob/main/Data/MyFavoriteWalk_geojson.geojson">My Favorite Walk</a></h2>
-    <h2><a href="github.com/livicd/Homework-2/blob/main/Data/MyOldHouse_geojson.geojson">My Old House</a></h2>
-    <h2><a href="github.com/livicd/Homework-2/blob/main/Data/MyNewHouse_geojson.geojson">My New House</a></h2>
+    <h2><a href="https://github.com/livicd/Homework-2/blob/main/Data/MyBusStop_geojson.geojson">My Bus Stop</a></h2>
+    <h2><a href="https://github.com/livicd/Homework-2/blob/main/Data/MyFavoriteWalk_geojson.geojson">My Favorite Walk</a></h2>
+    <h2><a href="https://github.com/livicd/Homework-2/blob/main/Data/MyOldHouse_geojson.geojson">My Old House</a></h2>
+    <h2><a href="https://github.com/livicd/Homework-2/blob/main/Data/MyNewHouse_geojson.geojson">My New House</a></h2>
     <h2>Vector Data from the Internet</h2>
     <h2><a href="http://maps.co.mecklenburg.nc.us/openmapping/data.html">Charlotte Roads</a></h2>
 </body>
