--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Homework 2 - Olivia Dagenhart</h1>
-    <img src="./Image/Homework2Map.png" alt="">
+    <img src="./Image/FinalMap.png" alt="">
     <h2>My Vector Data</h2>
     <h2><a href="https://github.com/livicd/Homework-2/blob/main/Data/MyBusStop_geojson.geojson">My Bus Stop</a></h2>
     <h2><a href="https://github.com/livicd/Homework-2/blob/main/Data/MyFavoriteWalk_geojson.geojson">My Favorite Walk</a></h2>
